src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOSTROPHE
    CASE
    COMMENT
    CONST
    FILE
    GOTO
    LABEL
    NIL
    PACKED
    PROCEDURE
    READ
    RECORD
    REPEAT
    SET
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block PERIOD
Rule 2     block -> declarations compound_statement
Rule 3     function_block -> VAR var_declarations compound_statement
Rule 4     function_block -> compound_statement
Rule 5     declarations -> VAR var_declarations
Rule 6     declarations -> function_declaration
Rule 7     declarations -> empty
Rule 8     declaration -> VAR var_declarations
Rule 9     declaration -> function_declaration
Rule 10    var_declarations -> var_declarations var_declaration
Rule 11    var_declarations -> var_declaration
Rule 12    var_declaration -> id_list COLON type_spec SEMICOLON
Rule 13    id_list -> id_list COMMA ID
Rule 14    id_list -> ID
Rule 15    type_spec -> INTEGER_TYPE
Rule 16    type_spec -> REAL_TYPE
Rule 17    type_spec -> BOOLEAN
Rule 18    type_spec -> STRING_TYPE
Rule 19    type_spec -> CHAR_TYPE
Rule 20    type_spec -> STRING_TYPE LBRACKET INTEGER RBRACKET
Rule 21    type_spec -> array_type
Rule 22    array_type -> ARRAY LBRACKET INTEGER PERIOD PERIOD INTEGER RBRACKET OF type_spec
Rule 23    compound_statement -> BEGIN statement_list END
Rule 24    statement_list -> statement_list SEMICOLON statement
Rule 25    statement_list -> statement
Rule 26    statement -> compound_statement
Rule 27    statement -> assignment_statement
Rule 28    statement -> if_statement
Rule 29    statement -> while_statement
Rule 30    statement -> for_statement
Rule 31    statement -> procedure_call_statement
Rule 32    statement -> empty
Rule 33    assignment_statement -> variable ASSIGN expression
Rule 34    variable -> ID
Rule 35    variable -> ID LBRACKET expression RBRACKET
Rule 36    if_statement -> IF expression THEN statement
Rule 37    if_statement -> IF expression THEN statement ELSE statement
Rule 38    while_statement -> WHILE expression DO statement
Rule 39    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 40    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 41    procedure_call_statement -> ID LPAREN expression_list RPAREN
Rule 42    procedure_call_statement -> ID LPAREN RPAREN
Rule 43    procedure_call_statement -> WRITELN LPAREN expression_list RPAREN
Rule 44    procedure_call_statement -> WRITELN LPAREN RPAREN
Rule 45    procedure_call_statement -> WRITE LPAREN expression_list RPAREN
Rule 46    procedure_call_statement -> WRITE LPAREN RPAREN
Rule 47    procedure_call_statement -> READLN LPAREN variable RPAREN
Rule 48    procedure_call_statement -> READLN LPAREN RPAREN
Rule 49    expression_list -> expression_list COMMA expression
Rule 50    expression_list -> expression
Rule 51    expression -> simple_expression
Rule 52    expression -> simple_expression relop simple_expression
Rule 53    relop -> EQ
Rule 54    relop -> NEQ
Rule 55    relop -> LT
Rule 56    relop -> LE
Rule 57    relop -> GT
Rule 58    relop -> GE
Rule 59    relop -> IN
Rule 60    simple_expression -> term
Rule 61    simple_expression -> simple_expression addop term
Rule 62    addop -> PLUS
Rule 63    addop -> MINUS
Rule 64    addop -> OR
Rule 65    term -> factor
Rule 66    term -> term mulop factor
Rule 67    mulop -> TIMES
Rule 68    mulop -> DIVIDE
Rule 69    mulop -> DIV
Rule 70    mulop -> MOD
Rule 71    mulop -> AND
Rule 72    factor -> variable
Rule 73    factor -> INTEGER
Rule 74    factor -> REAL
Rule 75    factor -> STRING
Rule 76    factor -> TRUE
Rule 77    factor -> FALSE
Rule 78    factor -> LPAREN expression RPAREN
Rule 79    factor -> NOT factor
Rule 80    factor -> function_call
Rule 81    function_call -> ID LPAREN expression_list RPAREN
Rule 82    function_call -> ID LPAREN RPAREN
Rule 83    function_declaration -> FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON function_block SEMICOLON
Rule 84    param_list -> param_list SEMICOLON param
Rule 85    param_list -> param
Rule 86    param -> id_list COLON type_spec
Rule 87    empty -> <empty>

Terminals, with rules where they appear

AND                  : 71
APOSTROPHE           : 
ARRAY                : 22
ASSIGN               : 33 39 40
BEGIN                : 23
BOOLEAN              : 17
CASE                 : 
CHAR_TYPE            : 19
COLON                : 12 83 86
COMMA                : 13 49
COMMENT              : 
CONST                : 
DIV                  : 69
DIVIDE               : 68
DO                   : 38 39 40
DOWNTO               : 40
ELSE                 : 37
END                  : 23
EQ                   : 53
FALSE                : 77
FILE                 : 
FOR                  : 39 40
FUNCTION             : 83
GE                   : 58
GOTO                 : 
GT                   : 57
ID                   : 1 13 14 34 35 39 40 41 42 81 82 83
IF                   : 36 37
IN                   : 59
INTEGER              : 20 22 22 73
INTEGER_TYPE         : 15
LABEL                : 
LBRACKET             : 20 22 35
LE                   : 56
LPAREN               : 41 42 43 44 45 46 47 48 78 81 82 83
LT                   : 55
MINUS                : 63
MOD                  : 70
NEQ                  : 54
NIL                  : 
NOT                  : 79
OF                   : 22
OR                   : 64
PACKED               : 
PERIOD               : 1 22 22
PLUS                 : 62
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 20 22 35
READ                 : 
READLN               : 47 48
REAL                 : 74
REAL_TYPE            : 16
RECORD               : 
REPEAT               : 
RPAREN               : 41 42 43 44 45 46 47 48 78 81 82 83
SEMICOLON            : 1 12 24 83 83 84
SET                  : 
STRING               : 75
STRING_TYPE          : 18 20
THEN                 : 36 37
TIMES                : 67
TO                   : 39
TRUE                 : 76
TYPE                 : 
UNTIL                : 
VAR                  : 3 5 8
WHILE                : 38
WITH                 : 
WRITE                : 45 46
WRITELN              : 43 44
error                : 

Nonterminals, with rules where they appear

addop                : 61
array_type           : 21
assignment_statement : 27
block                : 1
compound_statement   : 2 3 4 26
declaration          : 
declarations         : 2
empty                : 7 32
expression           : 33 35 36 37 38 39 39 40 40 49 50 78
expression_list      : 41 43 45 49 81
factor               : 65 66 79
for_statement        : 30
function_block       : 83
function_call        : 80
function_declaration : 6 9
id_list              : 12 13 86
if_statement         : 28
mulop                : 66
param                : 84 85
param_list           : 83 84
procedure_call_statement : 31
program              : 0
relop                : 52
simple_expression    : 51 52 52 61
statement            : 24 25 36 37 37 38 39 40
statement_list       : 23 24
term                 : 60 61 66
type_spec            : 12 22 83 86
var_declaration      : 10 11
var_declarations     : 3 5 8 10
variable             : 33 47 72
while_statement      : 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block PERIOD

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block PERIOD
    (2) block -> . declarations compound_statement
    (5) declarations -> . VAR var_declarations
    (6) declarations -> . function_declaration
    (7) declarations -> . empty
    (83) function_declaration -> . FUNCTION ID LPAREN param_list RPAREN COLON type_spec SEMICOLON function_block SEMICOLON
    (87) empty -> .

    VAR             shift and go to state 7
    FUNCTION        shift and go to state 10
    BEGIN           reduce using rule 87 (empty -> .)

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    function_declaration           shift and go to state 8
    empty                          shift and go to state 9

state 5

    (1) program -> PROGRAM ID SEMICOLON block . PERIOD

    PERIOD          shift and go to state 11


state 6

    (2) block -> declarations . compound_statement
    (23) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 13

    compound_statement             shift and go to state 12

state 7

    (5) declarations -> VAR . var_declarations
    (10) var_declarations -> . var_declarations var_declaration
    (11) var_declarations -> . var_declaration
    (12) var_declaration -> . id_list COLON type_spec SEMICOLON
    (13) id_list -> . id_list COMMA ID
    (14) id_list -> . ID

    ID              shift and go to state 17

    var_declarations               shift and go to state 14
    var_declaration                shift and go to state 15
    id_list                        shift and go to state 16

state 8

    (6) declarations -> function_declaration .

    BEGIN           reduce using rule 6 (declarations -> function_declaration .)


state 9

    (7) declarations -> empty .

    BEGIN           reduce using rule 7 (declarations -> empty .)


state 10

    (83) function_declaration -> FUNCTION . ID LPAREN param_list RPAREN COLON type_spec SEMICOLON function_block SEMICOLON

    ID              shift and go to state 18


state 11

    (1) program -> PROGRAM ID SEMICOLON block PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block PERIOD .)


state 12

    (2) block -> declarations compound_statement .

    PERIOD          reduce using rule 2 (block -> declarations compound_statement .)


state 13

    (23) compound_statement -> BEGIN . statement_list END
    (24) statement_list -> . statement_list SEMICOLON statement
    (25) statement_list -> . statement
    (26) statement -> . compound_statement
    (27) statement -> . assignment_statement
    (28) statement -> . if_statement
    (29) statement -> . while_statement
    (30) statement -> . for_statement
    (31) statement -> . procedure_call_statement
    (32) statement -> . empty
    (23) compound_statement -> . BEGIN statement_list END
    (33) assignment_statement -> . variable ASSIGN expression
    (36) if_statement -> . IF expression THEN statement
    (37) if_statement -> . IF expression THEN statement ELSE statement
    (38) while_statement -> . WHILE expression DO statement
    (39) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (40) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (41) procedure_call_statement -> . ID LPAREN expression_list RPAREN
    (42) procedure_call_statement -> . ID LPAREN RPAREN
    (43) procedure_call_statement -> . WRITELN LPAREN expression_list RPAREN
    (44) procedure_call_statement -> . WRITELN LPAREN RPAREN
    (45) procedure_call_statement -> . WRITE LPAREN expression_list RPAREN
    (46) procedure_call_statement -> . WRITE LPAREN RPAREN
    (47) procedure_call_statement -> . READLN LPAREN variable RPAREN
    (48) procedure_call_statement -> . READLN LPAREN RPAREN
    (87) empty -> .
    (34) variable -> . ID
    (35) variable -> . ID LBRACKET expression RBRACKET

    BEGIN           shift and go to state 13
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    ID              shift and go to state 32
    WRITELN         shift and go to state 33
    WRITE           shift and go to state 34
    READLN          shift and go to state 35
    END             reduce using rule 87 (empty -> .)
    SEMICOLON       reduce using rule 87 (empty -> .)

    statement_list                 shift and go to state 19
    statement                      shift and go to state 20
    compound_statement             shift and go to state 21
    assignment_statement           shift and go to state 22
    if_statement                   shift and go to state 23
    while_statement                shift and go to state 24
    for_statement                  shift and go to state 25
    procedure_call_statement       shift and go to state 26
    empty                          shift and go to state 27
    variable                       shift and go to state 28

state 14

    (5) declarations -> VAR var_declarations .
    (10) var_declarations -> var_declarations . var_declaration
    (12) var_declaration -> . id_list COLON type_spec SEMICOLON
    (13) id_list -> . id_list COMMA ID
    (14) id_list -> . ID

    BEGIN           reduce using rule 5 (declarations -> VAR var_declarations .)
    ID              shift and go to state 17

    var_declaration                shift and go to state 36
    id_list                        shift and go to state 16

state 15

    (11) var_declarations -> var_declaration .

    ID              reduce using rule 11 (var_declarations -> var_declaration .)
    BEGIN           reduce using rule 11 (var_declarations -> var_declaration .)


state 16

    (12) var_declaration -> id_list . COLON type_spec SEMICOLON
    (13) id_list -> id_list . COMMA ID

    COLON           shift and go to state 37
    COMMA           shift and go to state 38


state 17

    (14) id_list -> ID .

    COLON           reduce using rule 14 (id_list -> ID .)
    COMMA           reduce using rule 14 (id_list -> ID .)


state 18

    (83) function_declaration -> FUNCTION ID . LPAREN param_list RPAREN COLON type_spec SEMICOLON function_block SEMICOLON

    LPAREN          shift and go to state 39


state 19

    (23) compound_statement -> BEGIN statement_list . END
    (24) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 40
    SEMICOLON       shift and go to state 41


state 20

    (25) statement_list -> statement .

    END             reduce using rule 25 (statement_list -> statement .)
    SEMICOLON       reduce using rule 25 (statement_list -> statement .)


state 21

    (26) statement -> compound_statement .

    END             reduce using rule 26 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 26 (statement -> compound_statement .)
    ELSE            reduce using rule 26 (statement -> compound_statement .)


state 22

    (27) statement -> assignment_statement .

    END             reduce using rule 27 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 27 (statement -> assignment_statement .)
    ELSE            reduce using rule 27 (statement -> assignment_statement .)


state 23

    (28) statement -> if_statement .

    END             reduce using rule 28 (statement -> if_statement .)
    SEMICOLON       reduce using rule 28 (statement -> if_statement .)
    ELSE            reduce using rule 28 (statement -> if_statement .)


state 24

    (29) statement -> while_statement .

    END             reduce using rule 29 (statement -> while_statement .)
    SEMICOLON       reduce using rule 29 (statement -> while_statement .)
    ELSE            reduce using rule 29 (statement -> while_statement .)


state 25

    (30) statement -> for_statement .

    END             reduce using rule 30 (statement -> for_statement .)
    SEMICOLON       reduce using rule 30 (statement -> for_statement .)
    ELSE            reduce using rule 30 (statement -> for_statement .)


state 26

    (31) statement -> procedure_call_statement .

    END             reduce using rule 31 (statement -> procedure_call_statement .)
    SEMICOLON       reduce using rule 31 (statement -> procedure_call_statement .)
    ELSE            reduce using rule 31 (statement -> procedure_call_statement .)


state 27

    (32) statement -> empty .

    END             reduce using rule 32 (statement -> empty .)
    SEMICOLON       reduce using rule 32 (statement -> empty .)
    ELSE            reduce using rule 32 (statement -> empty .)


state 28

    (33) assignment_statement -> variable . ASSIGN expression

    ASSIGN          shift and go to state 42


state 29

    (36) if_statement -> IF . expression THEN statement
    (37) if_statement -> IF . expression THEN statement ELSE statement
    (51) expression -> . simple_expression
    (52) expression -> . simple_expression relop simple_expression
    (60) simple_expression -> . term
    (61) simple_expression -> . simple_expression addop term
    (65) term -> . factor
    (66) term -> . term mulop factor
    (72) factor -> . variable
    (73) factor -> . INTEGER
    (74) factor -> . REAL
    (75) factor -> . STRING
    (76) factor -> . TRUE
    (77) factor -> . FALSE
    (78) factor -> . LPAREN expression RPAREN
    (79) factor -> . NOT factor
    (80) factor -> . function_call
    (34) variable -> . ID
    (35) variable -> . ID LBRACKET expression RBRACKET
    (81) function_call -> . ID LPAREN expression_list RPAREN
    (82) function_call -> . ID LPAREN RPAREN

    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    STRING          shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    LPAREN          shift and go to state 53
    NOT             shift and go to state 54
    ID              shift and go to state 56

    expression                     shift and go to state 43
    simple_expression              shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 46
    variable                       shift and go to state 47
    function_call                  shift and go to state 55

state 30

    (38) while_statement -> WHILE . expression DO statement
    (51) expression -> . simple_expression
    (52) expression -> . simple_expression relop simple_expression
    (60) simple_expression -> . term
    (61) simple_expression -> . simple_expression addop term
    (65) term -> . factor
    (66) term -> . term mulop factor
    (72) factor -> . variable
    (73) factor -> . INTEGER
    (74) factor -> . REAL
    (75) factor -> . STRING
    (76) factor -> . TRUE
    (77) factor -> . FALSE
    (78) factor -> . LPAREN expression RPAREN
    (79) factor -> . NOT factor
    (80) factor -> . function_call
    (34) variable -> . ID
    (35) variable -> . ID LBRACKET expression RBRACKET
    (81) function_call -> . ID LPAREN expression_list RPAREN
    (82) function_call -> . ID LPAREN RPAREN

    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    STRING          shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    LPAREN          shift and go to state 53
    NOT             shift and go to state 54
    ID              shift and go to state 56

    expression                     shift and go to state 57
    simple_expression              shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 46
    variable                       shift and go to state 47
    function_call                  shift and go to state 55

state 31

    (39) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (40) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 58


state 32

    (41) procedure_call_statement -> ID . LPAREN expression_list RPAREN
    (42) procedure_call_statement -> ID . LPAREN RPAREN
    (34) variable -> ID .
    (35) variable -> ID . LBRACKET expression RBRACKET

    LPAREN          shift and go to state 59
    ASSIGN          reduce using rule 34 (variable -> ID .)
    LBRACKET        shift and go to state 60


state 33

    (43) procedure_call_statement -> WRITELN . LPAREN expression_list RPAREN
    (44) procedure_call_statement -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 61


state 34

    (45) procedure_call_statement -> WRITE . LPAREN expression_list RPAREN
    (46) procedure_call_statement -> WRITE . LPAREN RPAREN

    LPAREN          shift and go to state 62


state 35

    (47) procedure_call_statement -> READLN . LPAREN variable RPAREN
    (48) procedure_call_statement -> READLN . LPAREN RPAREN

    LPAREN          shift and go to state 63


state 36

    (10) var_declarations -> var_declarations var_declaration .

    ID              reduce using rule 10 (var_declarations -> var_declarations var_declaration .)
    BEGIN           reduce using rule 10 (var_declarations -> var_declarations var_declaration .)


state 37

    (12) var_declaration -> id_list COLON . type_spec SEMICOLON
    (15) type_spec -> . INTEGER_TYPE
    (16) type_spec -> . REAL_TYPE
    (17) type_spec -> . BOOLEAN
    (18) type_spec -> . STRING_TYPE
    (19) type_spec -> . CHAR_TYPE
    (20) type_spec -> . STRING_TYPE LBRACKET INTEGER RBRACKET
    (21) type_spec -> . array_type
    (22) array_type -> . ARRAY LBRACKET INTEGER PERIOD PERIOD INTEGER RBRACKET OF type_spec

    INTEGER_TYPE    shift and go to state 65
    REAL_TYPE       shift and go to state 66
    BOOLEAN         shift and go to state 67
    STRING_TYPE     shift and go to state 68
    CHAR_TYPE       shift and go to state 69
    ARRAY           shift and go to state 71

    type_spec                      shift and go to state 64
    array_type                     shift and go to state 70

state 38

    (13) id_list -> id_list COMMA . ID

    ID              shift and go to state 72


state 39

    (83) function_declaration -> FUNCTION ID LPAREN . param_list RPAREN COLON type_spec SEMICOLON function_block SEMICOLON
    (84) param_list -> . param_list SEMICOLON param
    (85) param_list -> . param
    (86) param -> . id_list COLON type_spec
    (13) id_list -> . id_list COMMA ID
    (14) id_list -> . ID

    ID              shift and go to state 17

    param_list                     shift and go to state 73
    param                          shift and go to state 74
    id_list                        shift and go to state 75

state 40

    (23) compound_statement -> BEGIN statement_list END .

    PERIOD          reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    END             reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    ELSE            reduce using rule 23 (compound_statement -> BEGIN statement_list END .)


state 41
